runtime/tests/suite/store_retval.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7f\01\7f\03\82\80\80\80\00\01\00\0a\8c\80\80"
    "\80\00\01\86\80\80\80\00\00\41\01\21\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7e\01\7e\03\82\80\80\80\00\01\00\0a\8c\80\80"
    "\80\00\01\86\80\80\80\00\00\42\01\21\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7d\01\7d\03\82\80\80\80\00\01\00\0a\8f\80\80"
    "\80\00\01\89\80\80\80\00\00\43\00\00\80\3f\21\00"
    "\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7c\01\7c\03\82\80\80\80\00\01\00\0a\93\80\80"
    "\80\00\01\8d\80\80\80\00\00\44\00\00\00\00\00\00"
    "\f0\3f\21\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7f\01\7f\03\82\80\80\80\00\01\00\05\83\80\80"
    "\80\00\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80"
    "\00\00\41\00\41\01\36\02\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7e\01\7e\03\82\80\80\80\00\01\00\05\83\80\80"
    "\80\00\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80"
    "\00\00\41\00\42\01\37\03\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7d\01\7d\03\82\80\80\80\00\01\00\05\83\80\80"
    "\80\00\01\00\01\0a\92\80\80\80\00\01\8c\80\80\80"
    "\00\00\41\00\43\00\00\80\3f\38\02\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7c\01\7c\03\82\80\80\80\00\01\00\05\83\80\80"
    "\80\00\01\00\01\0a\96\80\80\80\00\01\90\80\80\80"
    "\00\00\41\00\44\00\00\00\00\00\00\f0\3f\39\03\00"
    "\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7f\01\7f\03\82\80\80\80\00\01\00\05\83\80\80"
    "\80\00\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80"
    "\00\00\41\00\41\01\3a\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7f\01\7f\03\82\80\80\80\00\01\00\05\83\80\80"
    "\80\00\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80"
    "\00\00\41\00\41\01\3b\01\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7e\01\7e\03\82\80\80\80\00\01\00\05\83\80\80"
    "\80\00\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80"
    "\00\00\41\00\42\01\3c\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7e\01\7e\03\82\80\80\80\00\01\00\05\83\80\80"
    "\80\00\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80"
    "\00\00\41\00\42\01\3d\01\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7e\01\7e\03\82\80\80\80\00\01\00\05\83\80\80"
    "\80\00\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80"
    "\00\00\41\00\42\01\3e\02\00\0b"
  )
  "type mismatch"
)
